fix(theme-classic): make code block action buttons fully visible

--- a/packages/docusaurus-theme-classic/src/theme/CodeBlock/Buttons/styles.module.css
+++ b/packages/docusaurus-theme-classic/src/theme/CodeBlock/Buttons/styles.module.css
@@ -33,5 +33,5 @@
 }
 
 :global(.theme-code-block:hover) .buttonGroup button {
-  opacity: 0.4;
+  opacity: 1;
 }
